Lưu ảnh về local fix lỗi bán hàng tại quầy